<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- BASIC STRINGS -->
    <string name="app_name">Languages AR</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try again</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="press_to_exit">Press once again to exit!</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_reconnect_message">An error with connection occurred, do you want to try again?</string>
    <string name="permission_error_title">Permissions not granted!</string>

    <!-- SETTINGS STRINGS -->
    <string name="settings">Settings</string>
    <string name="night_mode_key" translatable="false">night_mode</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Turn on night mode in the app</string>
    <string name="selected_language_key" translatable="false">selected_language</string>
    <string name="selected_language_title">Selected language</string>

    <!-- PHOTOS OBJECT DETECTION -->
    <string name="ar">AR</string>
    <string name="detect_objects">Detect objects</string>
    <string name="cd_open_translation_btn">Results of translation</string>
    <string name="cd_latest_photo">Latest photo thumbnail</string>
    <string name="permission_error_msg">If you want to use this feature, you have to allow app to make photos!</string>
    <string name="allow">Allow</string>
    <string name="object_detection_error">There was an error with detecting object, try again in a moment!</string>
    <string name="image_capture_error">There was an error with capturing the image, try again in a moment!</string>
    <string name="detected_object">Detected object</string>
    <string name="cd_collapse_bottom_sheet">Collapse bottom sheet</string>
    <string name="cd_close_activity_btn">Close activity</string>
    <string name="cd_flash_btn">Toggle camera flash</string>
    <string name="cd_source_flag">Source language flag</string>
    <string name="cd_target_flag">Target language flag</string>
    <string name="cd_save_translation">Save new word</string>
    <string name="word_saved">Word saved in database!</string>
    <string name="other_detected_objects">Other detected objects</string>
    <string name="apply">Apply</string>

    <!-- DICTIONARY STRINGS -->
    <string name="dictionary">Dictionary</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="status">Status</string>
    <string name="current_filters">Current filters: %s</string>
    <string name="saved">Saved</string>
    <string name="known">Known</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="all">All</string>
    <string name="cd_save_filters">Save filters</string>
    <string name="filters_saved">Filters saved!</string>
    <string name="word_search">Search for word or translation</string>
    <string name="select_language_dialog_title">Choose the language you want to learn:</string>
    <string name="language_es">Spanish</string>
    <string name="language_fr">French</string>
    <string name="language_it">Italian</string>
    <string name="language_en">English</string>
    <string name="empty_dictionary">There are no words that meet your filters!</string>
    <string name="cd_word_options">Operations that you can do with this word</string>
    <string name="cd_word_sound">Play/pause this word</string>
    <string name="add_word">Add new word</string>
    <string name="word">Word</string>
    <string name="word_empty_error">Word cannot be empty!</string>
    <string name="translation">Translation</string>
    <string name="translation_empty_error">Translation cannot be empty!</string>
    <string name="add_to_saved_words">Add to the list of saved words</string>
    <string name="save_word">Add to saved words</string>
    <string name="save_word_remove">Remove from saved words</string>
    <string name="known_word">Add to known words</string>
    <string name="known_word_remove">Remove from known words</string>
    <string name="delete_word">Delete word</string>
    <string name="database_updated">Database successfully updated!</string>

    <!-- TEST STRINGS -->
    <string name="tests">Tests</string>
    <string name="test_word_status_title">Which words\nyou want to test?</string>
    <string name="test_number_of_words_title">How many words\nyou want to test?</string>
    <string name="start_test">Start test</string>
    <string name="number_of_words_error">You cannot start test when the number of words to test is 0!</string>
    <string name="no_words_title">Empty database</string>
    <string name="no_words_msg">There are no words in database! If you want to test your knowledge, add words first!</string>
    <string name="no_saved_words">There are no saved words in database!</string>
    <string name="no_known_words">There are no known words in database!</string>
    <string name="question_x">Question %d</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="finish_test_dialog_title">Finishing the test</string>
    <string name="finish_test_dialog_msg1">Are you sure you want to finish the test and see your results?</string>
    <string name="finish_test_dialog_msg2">Are you sure you want to finish the test and see your results? You left some questions without answer!</string>
    <string name="interrupt">Interrupt</string>
    <string name="interrupt_test_dialog_msg">Are you sure you want to interrupt the test? All progress will be lost!</string>
    <string name="results">Results</string>
    <string name="your_results">Your result:</string>
    <string name="your_answer">Your answer: %s</string>
    <string name="no_answer_given">No answer given</string>
</resources>
