<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    tools:context=".view.fragments.FiltersBottomSheetFragment"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidePeekHeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/filters"
        android:textColor="@color/colorMenuIcons"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/collapseSheetBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_collapse_bottom_sheet"
        android:scaleType="center"
        android:tint="@color/colorMenuIcons"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageButton
        android:id="@+id/saveFiltersBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_save_translation"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/filterStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidePeekHeight" />

    <TextView
        android:id="@+id/filterStatusSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/colorMenuIcons"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/filterStatusTitle"
        app:layout_constraintTop_toBottomOf="@+id/filterStatusTitle"
        tools:text="Saved, Known, Other" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/statusSavedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:buttonTint="@color/colorMenuIcons"
        android:fontFamily="sans-serif-light"
        android:text="@string/saved"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterStatusSubTitle" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/statusKnownCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorMenuIcons"
        android:fontFamily="sans-serif-light"
        android:text="@string/known"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/statusSavedCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/statusSavedCheckBox" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/statusOtherCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorMenuIcons"
        android:fontFamily="sans-serif-light"
        android:text="@string/other"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/statusSavedCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/statusKnownCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>