<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".view.fragments.TestStartFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testWordStatusTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/test_word_status_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/statusRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testWordStatusTitle">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/statusAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorMenuIcons"
            android:checked="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/all"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/statusSavedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/colorMenuIcons"
            android:fontFamily="sans-serif-light"
            android:text="@string/saved"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/statusKnownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/colorMenuIcons"
            android:fontFamily="sans-serif-light"
            android:text="@string/known"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/testNumberOfWordsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/test_number_of_words_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/testWordStatusTitle"
        app:layout_constraintStart_toStartOf="@+id/testWordStatusTitle"
        app:layout_constraintTop_toBottomOf="@+id/statusRadioGroup" />

    <com.google.android.material.slider.Slider
        android:id="@+id/numberOfWordsSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="64"
        app:layout_constraintEnd_toEndOf="@+id/testNumberOfWordsTitle"
        app:layout_constraintStart_toStartOf="@+id/testNumberOfWordsTitle"
        app:layout_constraintTop_toBottomOf="@+id/testNumberOfWordsTitle"
        tools:value="16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startTestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="@string/start_test"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorBackground"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfWordsSlider" />
</androidx.constraintlayout.widget.ConstraintLayout>