<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/translationSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:clickable="true"
    android:elevation="8dp"
    android:focusable="true"
    tools:context=".view.fragments.TranslationBottomSheetFragment"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidePeekHeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/detected_object"
        android:textColor="@color/colorMenuIcons"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintEnd_toStartOf="@+id/hearTranslationBtn"
        app:layout_constraintStart_toEndOf="@+id/collapseSheetBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/collapseSheetBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_collapse_bottom_sheet"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_down" />

    <ImageButton
        android:id="@+id/saveTranslationBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_save_translation"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save" />

    <ImageButton
        android:id="@+id/hearTranslationBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_word_sound"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/guidePeekHeight"
        app:layout_constraintEnd_toStartOf="@+id/saveTranslationBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anim_sound_to_pause" />

    <ImageView
        android:id="@+id/sourceFlag"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/cd_source_flag"
        app:layout_constraintBottom_toBottomOf="@+id/sourceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sourceText"
        tools:src="#f00" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sourceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-light"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sourceFlag"
        app:layout_constraintTop_toBottomOf="@id/guidePeekHeight"
        tools:text="@tools:sample/lorem" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="-"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceText"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/targetFlag"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/cd_target_flag"
        app:layout_constraintBottom_toBottomOf="@+id/targetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/targetText"
        tools:src="#00f" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/targetText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-light"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toStartOf="@+id/targetFlag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="@tools:sample/lorem" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/otherObjectsBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/other_detected_objects"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorAccent"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetText"
        app:strokeColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>